[gd_scene load_steps=3 format=2]

[ext_resource path="res://bullets/bullet.gd" type="Script" id=1]
[ext_resource path="res://assets/audio/bullet_collision.ogg" type="AudioStream" id=2]

[node name="Bullet" type="Area2D"]
scale = Vector2( 2, 2 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[node name="Explosion" type="Particles2D" parent="."]
emitting = false

[node name="CollisionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = -10.0
max_distance = 1000.0
bus = "MuffledBus"

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
